chore: Process time configuration for SLURM

--- a/nextflow.config
+++ b/nextflow.config
@@ -189,7 +189,6 @@ params {
   }
 
   resources {
-
     threads {
       fastp                 = 8
       nanoq                 = 1
@@ -212,6 +211,28 @@ params {
       concoct               = 4
       blast                 = 8
     }
+    time {
+      fastp                 = "1h"
+      nanoq                 = "1h"
+      scrubby               = "1h"
+      vircov                = "1h"
+      vircovRemap           = "1h"
+      vircovParallel        = "1h"
+      cerebro               = "1h"
+      kraken2               = "1h"
+      bracken               = "1h"
+      minimap2              = "1h"
+      metabat2              = "1h"
+      metabuli              = "1h"
+      sylph                 = "1h"
+      semibin2              = "1h"
+      kmcp                  = "1h"
+      ganon                 = "1h"
+      metaspades            = "4h"
+      megahit               = "4h" 
+      concoct               = "1h"
+      blast                 = "4h"
+    }
     memory {
       cerebro               = "16 GB"
       metaspades            = "16 GB"
@@ -225,7 +246,6 @@ params {
       vircov                = "16 GB"
       blast                 = "16 GB"
     }
-
     conda {
       bracken               = "$baseDir/lib/resources/conda/bracken.yml"
       cerebro               = "$baseDir/lib/resources/conda/cerebro.yml"
@@ -269,6 +289,7 @@ params {
       blast                 = "docker://quay.io/biocontainers/blast:2.16.0--h66d330f_5"
     }
   }
+ 
 }
 
 // Profiles should be here because of resource parameter
@@ -390,7 +411,7 @@ profiles {
 
     params.resources.memory.metaspades             = "64 GB"
     params.resources.memory.megahit                = "64 GB"
-    params.resources.memory.metabuli               = "64 GB"
+    params.resources.memory.metabuli               = "128 GB"
     params.resources.memory.kraken2                = "768 GB"
     params.resources.memory.kmcp                   = "256 GB"
     params.resources.memory.ganon                  = "384 GB"
@@ -523,139 +544,163 @@ process {
     withLabel: cerebro { 
       cpus = params.resources.threads.cerebro 
       memory = params.resources.memory.cerebro
+      time = params.resources.time.cerebro
       conda = params.resources.conda.cerebro
       container = params.resources.apptainer.cerebro
     }
     withLabel: cerebroPipeline { 
       cpus = params.resources.threads.cerebro 
       memory = params.resources.memory.cerebro
+      time = params.resources.time.cerebro
       conda = params.resources.conda.cerebro
       container = params.resources.apptainer.cerebro
     }
     withLabel: panviralVirusRecovery { 
       cpus = params.resources.threads.vircov 
       memory = params.resources.memory.vircov
+      time = params.resources.time.vircov
       conda = params.resources.conda.vircov
       container = params.resources.apptainer.vircov
     }
     withLabel: panviralVirusTools { 
-      cpus = 1
+      cpus = params.resources.time.vircov
+      time = params.resources.time.vircov
       conda = params.resources.conda.vircov
       container = params.resources.apptainer.vircov
     }
     withLabel: qualityReadScan { 
       cpus = params.resources.threads.cerebro 
+      time = params.resources.time.cerebro
       conda = params.resources.conda.cerebro
       container = params.resources.apptainer.cerebro
     }
     withLabel: qualityDeduplication { 
       cpus = params.resources.threads.cerebro 
+      time = params.resources.time.cerebro
       conda = params.resources.conda.cerebro
       container = params.resources.apptainer.cerebro
     }
     withLabel: qualityReadQualityFastp { 
       cpus = params.resources.threads.fastp 
+      time = params.resources.time.fastp
       conda = params.resources.conda.fastp
       container = params.resources.apptainer.fastp
     }
     withLabel: qualityReadQualityNanoq { 
       cpus = params.resources.threads.nanoq 
+      time = params.resources.time.nanoq
       conda = params.resources.conda.nanoq
       container = params.resources.apptainer.nanoq
     }
     withLabel: qualityHostDepletion { 
       cpus = params.resources.threads.scrubby
+      time = params.resources.time.scrubby
       conda = params.resources.conda.scrubby
       container = params.resources.apptainer.scrubby
     }
     withLabel: qualityInternalControls { 
       cpus = params.resources.threads.vircov
+      time = params.resources.time.vircov
       conda = params.resources.conda.virscrub
       container = params.resources.apptainer.virscrub
     }
     withLabel: qualityBackgroundDepletion { 
       cpus = params.resources.threads.vircov
+      time = params.resources.time.vircov
       conda = params.resources.conda.virscrub
       container = params.resources.apptainer.virscrub
     }
     withLabel: pathogenProfileVircov {
       cpus = params.resources.threads.vircov 
       memory = params.resources.memory.vircov
+      time = params.resources.time.vircov
       conda = params.resources.conda.vircov
       container = params.resources.apptainer.vircov
     }
     withLabel: pathogenProfileKraken2 { 
       cpus = params.resources.threads.kraken2 
       memory = params.resources.memory.kraken2
+      time = params.resources.time.kraken2
       conda = params.resources.conda.kraken2
       container = params.resources.apptainer.kraken2
     }
     withLabel: pathogenProfileBracken { 
       cpus = params.resources.threads.bracken 
       memory = params.resources.memory.bracken
+      time = params.resources.time.bracken
       conda = params.resources.conda.bracken
       container = params.resources.apptainer.bracken
     }
     withLabel: pathogenProfileSylph { 
       cpus = params.resources.threads.sylph 
       memory = params.resources.memory.sylph 
+      time = params.resources.time.sylph
       conda = params.resources.conda.sylph
       container = params.resources.apptainer.sylph
     }
     withLabel: pathogenProfileKmcp { 
       cpus = params.resources.threads.kmcp 
-      memory = params.resources.memory.kmcp 
+      memory = params.resources.memory.kmcp
+      time = params.resources.time.kmcp 
       conda = params.resources.conda.kmcp
       container = params.resources.apptainer.kmcp
     }
     withLabel: pathogenProfileGanon { 
       cpus = params.resources.threads.ganon 
       memory = params.resources.memory.ganon 
+      time = params.resources.time.ganon
       conda = params.resources.conda.ganon
       container = params.resources.apptainer.ganon
     }
     withLabel: pathogenProfileMetabuli {  
       cpus = params.resources.threads.metabuli
       memory = params.resources.memory.metabuli 
+      time = params.resources.time.metabuli
       conda = params.resources.conda.metabuli
       container = params.resources.apptainer.metabuli
     }
     withLabel: pathogenAssemblyMetaspades {  
       cpus = params.resources.threads.metaspades
       memory = params.resources.memory.metaspades 
+      time = params.resources.time.metaspades
       conda = params.resources.conda.metaspades
       container = params.resources.apptainer.metaspades
     }
     withLabel: pathogenAssemblyMegahit {  
       cpus = params.resources.threads.megahit
       memory = params.resources.memory.megahit 
+      time = params.resources.time.megahit
       conda = params.resources.conda.megahit
       container = params.resources.apptainer.megahit
-      time = "4h"
     }
     withLabel: pathogenAssemblyContigCoverage {  
       cpus = params.resources.threads.minimap2
+      time = params.resources.time.minimap2
       conda = params.resources.conda.minimap2
       container = params.resources.apptainer.minimap2
     }
     withLabel: pathogenAssemblyConcoct {  
       cpus = params.resources.threads.concoct
+      time = params.resources.time.concoct
       conda = params.resources.conda.concoct
       container = params.resources.apptainer.concoct
     }
     withLabel: pathogenAssemblyMetabat2 {  
       cpus = params.resources.threads.metabat2
+      time = params.resources.time.metabat2
       conda = params.resources.conda.metabat2
       container = params.resources.apptainer.metabat2
     }
     withLabel: pathogenAssemblySemiBin2 {  
       cpus = params.resources.threads.semibin2
+      time = params.resources.time.semibin2
       conda = params.resources.conda.semibin2
       container = params.resources.apptainer.semibin2
     }
     withLabel: pathogenAssemblyBlast {  
       cpus = params.resources.threads.blast
       memory = params.resources.memory.blast 
+      time = params.resources.time.blast
       conda = params.resources.conda.blast
       container = params.resources.apptainer.blast
     }
@@ -684,10 +729,15 @@ profiles {
 
     process {
 
+      // Default process resources
+      cpus   = 1
+      memory = '4 GB'
+      time   = '1h'
+
       if( params.slurmPartition )
         queue = params.slurmPartition
 
-      errorStrategy = { (task.exitStatus in [143,137] ? 'retry' : 'terminate') }
+      errorStrategy = { (task.exitStatus in [143,137] ? 'retry' : 'ignore') }
       maxRetries    = 2
       maxErrors     = 20
 
